samples/_failures_safe/1761198898_c70d48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13d3927d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_13d3927d.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
